rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bl.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 9,
        "id": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "argument": {
            "commentStart": 5,
            "end": 9,
            "moduleId": 0,
            "raw": "true",
            "start": 5,
            "type": "Literal",
            "type": "Literal",
            "value": true
          },
          "commentStart": 4,
          "end": 9,
          "moduleId": 0,
          "operator": "!",
          "start": 4,
          "type": "UnaryExpression",
          "type": "UnaryExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 9,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 9,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
