rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bm.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 16,
        "id": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 4,
          "end": 16,
          "left": {
            "commentStart": 4,
            "end": 8,
            "moduleId": 0,
            "raw": "true",
            "start": 4,
            "type": "Literal",
            "type": "Literal",
            "value": true
          },
          "moduleId": 0,
          "operator": "&",
          "right": {
            "commentStart": 11,
            "end": 16,
            "moduleId": 0,
            "raw": "false",
            "start": 11,
            "type": "Literal",
            "type": "Literal",
            "value": false
          },
          "start": 4,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 16,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 16,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
