rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__c.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 37,
        "id": {
          "commentStart": 0,
          "end": 5,
          "moduleId": 0,
          "name": "myVar",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 12,
                "end": 13,
                "moduleId": 0,
                "name": "x",
                "start": 12,
                "type": "Identifier"
              },
              "arg": {
                "argument": {
                  "arguments": [
                    {
                      "type": "LabeledArg",
                      "label": {
                        "commentStart": 22,
                        "end": 23,
                        "moduleId": 0,
                        "name": "a",
                        "start": 22,
                        "type": "Identifier"
                      },
                      "arg": {
                        "commentStart": 24,
                        "end": 25,
                        "moduleId": 0,
                        "raw": "5",
                        "start": 24,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 5.0,
                          "suffix": "None"
                        }
                      }
                    },
                    {
                      "type": "LabeledArg",
                      "label": {
                        "commentStart": 27,
                        "end": 28,
                        "moduleId": 0,
                        "name": "b",
                        "start": 27,
                        "type": "Identifier"
                      },
                      "arg": {
                        "commentStart": 29,
                        "end": 30,
                        "moduleId": 0,
                        "raw": "4",
                        "start": 29,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 4.0,
                          "suffix": "None"
                        }
                      }
                    }
                  ],
                  "callee": {
                    "abs_path": false,
                    "commentStart": 15,
                    "end": 21,
                    "moduleId": 0,
                    "name": {
                      "commentStart": 15,
                      "end": 21,
                      "moduleId": 0,
                      "name": "legLen",
                      "start": 15,
                      "type": "Identifier"
                    },
                    "path": [],
                    "start": 15,
                    "type": "Name"
                  },
                  "commentStart": 15,
                  "end": 31,
                  "moduleId": 0,
                  "start": 15,
                  "type": "CallExpressionKw",
                  "type": "CallExpressionKw",
                  "unlabeled": null
                },
                "commentStart": 14,
                "end": 31,
                "moduleId": 0,
                "operator": "-",
                "start": 14,
                "type": "UnaryExpression",
                "type": "UnaryExpression"
              }
            },
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 33,
                "end": 34,
                "moduleId": 0,
                "name": "y",
                "start": 33,
                "type": "Identifier"
              },
              "arg": {
                "commentStart": 35,
                "end": 36,
                "moduleId": 0,
                "raw": "5",
                "start": 35,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 5.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "callee": {
            "abs_path": false,
            "commentStart": 8,
            "end": 11,
            "moduleId": 0,
            "name": {
              "commentStart": 8,
              "end": 11,
              "moduleId": 0,
              "name": "min",
              "start": 8,
              "type": "Identifier"
            },
            "path": [],
            "start": 8,
            "type": "Name"
          },
          "commentStart": 8,
          "end": 37,
          "moduleId": 0,
          "start": 8,
          "type": "CallExpressionKw",
          "type": "CallExpressionKw",
          "unlabeled": null
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 37,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 37,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
