rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__d2.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 21,
        "id": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 4,
          "end": 21,
          "left": {
            "argument": {
              "abs_path": false,
              "commentStart": 5,
              "end": 9,
              "moduleId": 0,
              "name": {
                "commentStart": 5,
                "end": 9,
                "moduleId": 0,
                "name": "leg2",
                "start": 5,
                "type": "Identifier"
              },
              "path": [],
              "start": 5,
              "type": "Name",
              "type": "Name"
            },
            "commentStart": 4,
            "end": 9,
            "moduleId": 0,
            "operator": "-",
            "start": 4,
            "type": "UnaryExpression",
            "type": "UnaryExpression"
          },
          "moduleId": 0,
          "operator": "+",
          "right": {
            "abs_path": false,
            "commentStart": 12,
            "end": 21,
            "moduleId": 0,
            "name": {
              "commentStart": 12,
              "end": 21,
              "moduleId": 0,
              "name": "thickness",
              "start": 12,
              "type": "Identifier"
            },
            "path": [],
            "start": 12,
            "type": "Name",
            "type": "Name"
          },
          "start": 4,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 21,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 21,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
