rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__f.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 5,
        "id": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 4,
          "end": 5,
          "moduleId": 0,
          "raw": "1",
          "start": 4,
          "type": "Literal",
          "type": "Literal",
          "value": {
            "value": 1.0,
            "suffix": "None"
          }
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 5,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 34,
  "moduleId": 0,
  "nonCodeMeta": {
    "nonCodeNodes": {
      "0": [
        {
          "commentStart": 6,
          "end": 34,
          "moduleId": 0,
          "start": 6,
          "type": "NonCodeNode",
          "value": {
            "type": "inlineComment",
            "value": "this is an inline comment",
            "style": "line"
          }
        }
      ]
    },
    "startNodes": []
  },
  "start": 0,
  "type": "Program"
}
