rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__g.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 3,
        "end": 52,
        "id": {
          "commentStart": 3,
          "end": 4,
          "moduleId": 0,
          "name": "x",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "abs_path": false,
                  "commentStart": 24,
                  "end": 26,
                  "moduleId": 0,
                  "name": {
                    "commentStart": 24,
                    "end": 26,
                    "moduleId": 0,
                    "name": "sg",
                    "start": 24,
                    "type": "Identifier"
                  },
                  "path": [],
                  "start": 24,
                  "type": "Name",
                  "type": "Name"
                },
                "commentStart": 17,
                "end": 26,
                "moduleId": 0,
                "start": 17,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              },
              {
                "argument": {
                  "abs_path": false,
                  "commentStart": 42,
                  "end": 44,
                  "moduleId": 0,
                  "name": {
                    "commentStart": 42,
                    "end": 44,
                    "moduleId": 0,
                    "name": "sg",
                    "start": 42,
                    "type": "Identifier"
                  },
                  "path": [],
                  "start": 42,
                  "type": "Name",
                  "type": "Name"
                },
                "commentStart": 35,
                "end": 44,
                "moduleId": 0,
                "start": 35,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "commentStart": 7,
            "end": 52,
            "moduleId": 0,
            "start": 7,
            "type": "Program"
          },
          "commentStart": 4,
          "end": 52,
          "moduleId": 0,
          "name": {
            "commentStart": 3,
            "end": 4,
            "moduleId": 0,
            "name": "x",
            "start": 3,
            "type": "Identifier"
          },
          "params": [],
          "start": 4,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "moduleId": 0,
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 52,
      "kind": "fn",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 52,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
