rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__i.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 22,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "obj",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 6,
          "end": 22,
          "moduleId": 0,
          "properties": [
            {
              "commentStart": 8,
              "end": 13,
              "key": {
                "commentStart": 8,
                "end": 9,
                "moduleId": 0,
                "name": "a",
                "start": 8,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 8,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 12,
                "end": 13,
                "moduleId": 0,
                "raw": "1",
                "start": 12,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 1.0,
                  "suffix": "None"
                }
              }
            },
            {
              "commentStart": 15,
              "end": 20,
              "key": {
                "commentStart": 15,
                "end": 16,
                "moduleId": 0,
                "name": "b",
                "start": 15,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 15,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 19,
                "end": 20,
                "moduleId": 0,
                "raw": "2",
                "start": 19,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 2.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "start": 6,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 22,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "commentStart": 28,
      "declaration": {
        "commentStart": 28,
        "end": 49,
        "id": {
          "commentStart": 28,
          "end": 34,
          "moduleId": 0,
          "name": "height",
          "start": 28,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 37,
          "end": 49,
          "left": {
            "commentStart": 37,
            "end": 38,
            "moduleId": 0,
            "raw": "1",
            "start": 37,
            "type": "Literal",
            "type": "Literal",
            "value": {
              "value": 1.0,
              "suffix": "None"
            }
          },
          "moduleId": 0,
          "operator": "-",
          "right": {
            "commentStart": 41,
            "computed": true,
            "end": 49,
            "moduleId": 0,
            "object": {
              "abs_path": false,
              "commentStart": 41,
              "end": 44,
              "moduleId": 0,
              "name": {
                "commentStart": 41,
                "end": 44,
                "moduleId": 0,
                "name": "obj",
                "start": 41,
                "type": "Identifier"
              },
              "path": [],
              "start": 41,
              "type": "Name",
              "type": "Name"
            },
            "property": {
              "commentStart": 45,
              "end": 48,
              "moduleId": 0,
              "raw": "\"a\"",
              "start": 45,
              "type": "Literal",
              "type": "Literal",
              "value": "a"
            },
            "start": 41,
            "type": "MemberExpression",
            "type": "MemberExpression"
          },
          "start": 37,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "moduleId": 0,
        "start": 28,
        "type": "VariableDeclarator"
      },
      "end": 49,
      "kind": "const",
      "moduleId": 0,
      "start": 28,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 49,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
