rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__j.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 22,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "obj",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 6,
          "end": 22,
          "moduleId": 0,
          "properties": [
            {
              "commentStart": 8,
              "end": 13,
              "key": {
                "commentStart": 8,
                "end": 9,
                "moduleId": 0,
                "name": "a",
                "start": 8,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 8,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 12,
                "end": 13,
                "moduleId": 0,
                "raw": "1",
                "start": 12,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 1.0,
                  "suffix": "None"
                }
              }
            },
            {
              "commentStart": 15,
              "end": 20,
              "key": {
                "commentStart": 15,
                "end": 16,
                "moduleId": 0,
                "name": "b",
                "start": 15,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 15,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 19,
                "end": 20,
                "moduleId": 0,
                "raw": "2",
                "start": 19,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 2.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "start": 6,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 22,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "commentStart": 27,
      "declaration": {
        "commentStart": 27,
        "end": 48,
        "id": {
          "commentStart": 27,
          "end": 33,
          "moduleId": 0,
          "name": "height",
          "start": 27,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 36,
          "end": 48,
          "left": {
            "commentStart": 36,
            "computed": true,
            "end": 44,
            "moduleId": 0,
            "object": {
              "abs_path": false,
              "commentStart": 36,
              "end": 39,
              "moduleId": 0,
              "name": {
                "commentStart": 36,
                "end": 39,
                "moduleId": 0,
                "name": "obj",
                "start": 36,
                "type": "Identifier"
              },
              "path": [],
              "start": 36,
              "type": "Name",
              "type": "Name"
            },
            "property": {
              "commentStart": 40,
              "end": 43,
              "moduleId": 0,
              "raw": "\"a\"",
              "start": 40,
              "type": "Literal",
              "type": "Literal",
              "value": "a"
            },
            "start": 36,
            "type": "MemberExpression",
            "type": "MemberExpression"
          },
          "moduleId": 0,
          "operator": "-",
          "right": {
            "commentStart": 47,
            "end": 48,
            "moduleId": 0,
            "raw": "1",
            "start": 47,
            "type": "Literal",
            "type": "Literal",
            "value": {
              "value": 1.0,
              "suffix": "None"
            }
          },
          "start": 36,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "moduleId": 0,
        "start": 27,
        "type": "VariableDeclarator"
      },
      "end": 48,
      "kind": "const",
      "moduleId": 0,
      "start": 27,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 48,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
